--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-MPapp/static/results/*
-!MPapp/.gitkeep
-!MPapp/static/results/d61749da-9e7b-40a2-bc98-6b8b3798dbae.results.txt
-!MPapp/static/results/d61749da-9e7b-40a2-bc98-6b8b3798dbae.results.json
-!MPapp/static/results/d61749da-9e7b-40a2-bc98-6b8b3798dbae.log
-MPapp/__pycache__
+ntm_profiler_webserver/static/results/*
+!ntm_profiler_webserver/.gitkeep
+!ntm_profiler_webserver/static/results/d61749da-9e7b-40a2-bc98-6b8b3798dbae.results.txt
+!ntm_profiler_webserver/static/results/d61749da-9e7b-40a2-bc98-6b8b3798dbae.results.json
+!ntm_profiler_webserver/static/results/d61749da-9e7b-40a2-bc98-6b8b3798dbae.log
+src/ntm_profiler_webserver/__pycache__
 .vscode/
 *.rdb
 *errlog.txt
@@ -12,18 +12,18 @@ MPapp/__pycache__
 *.list
 *.bin
 *.bam
-MPapp.egg-info/
-MPapp.egg-info/*.txt
+ntm_profiler_webserver.egg-info/
+ntm_profiler_webserver.egg-info/*.txt
 build
 malaria-db/
-MPapp/static/Plasmodium_falciparum.ASM276v2.dna.chromosome.1.fa.gz
-MPapp/static/Plasmodium_falciparum.ASM276v2.dna.chromosome.1.fa.gz
+ntm_profiler_webserver/static/Plasmodium_falciparum.ASM276v2.dna.chromosome.1.fa.gz
+ntm_profiler_webserver/static/Plasmodium_falciparum.ASM276v2.dna.chromosome.1.fa.gz
 *.gz
 *.fai
 *.fna
 *.gzi
-MPapp/static/fastafiles/AAKM01.fasta
-MPapp/static/fastafiles/malariae.fasta
+ntm_profiler_webserver/static/fastafiles/AAKM01.fasta
+ntm_profiler_webserver/static/fastafiles/malariae.fasta
 *.fasta
 *.log
 *.bai
